@@ -1,6 +1,7 @@
 2010-10-23 Homer Xing <homer.xing@gmail.com>
 
     * Add Fedora repository template
+    * Put section name in a separate text entry
 
 2010-10-15 Homer Xing <homer.xing@gmail.com>
 
